Skillfy-Assigments/Istio/destinationrule-notification.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: notification-destinationrule
spec:
  host: notification-service
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
  subsets:
  - name: stable
    labels:
      version: stable
  - name: canary
    labels:
      version: canary
