Skillfy-Assigments/Istio/virtualservice-notification.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: notification-virtualservice
spec:
  hosts:
  - notification-service
  http:
  - match:
    - headers:
        x-user-type:
          exact: beta
    route:
    - destination:
        host: notification-service
        subset: canary
      weight: 100
  - route:
    - destination:
        host: notification-service
        subset: stable
      weight: 90
    - destination:
        host: notification-service
        subset: canary
      weight: 10
