Skillfy-Assigments/Istio/virtualservice-transaction.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: transaction-virtualservice
spec:
  hosts:
  - transaction-service
  http:
  - route:
    - destination:
        host: transaction-service
        subset: v1
      weight: 90
    - destination:
        host: transaction-service
        subset: v2
      weight: 10
